package logic

import (
	"context"

	"bookNew/service/stock/rpc/internal/svc"
	"bookNew/service/stock/rpc/stock"

	"github.com/zeromicro/go-zero/core/logx"

	// ğŸ”¥ 1. å¿…é¡»å¼•å…¥è¿™ä¸¤ä¸ªåŒ…
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

type DeductLogic struct {
	ctx    context.Context
	svcCtx *svc.ServiceContext
	logx.Logger
}

func NewDeductLogic(ctx context.Context, svcCtx *svc.ServiceContext) *DeductLogic {
	return &DeductLogic{
		ctx:    ctx,
		svcCtx: svcCtx,
		Logger: logx.WithContext(ctx),
	}
}

// Deduct æ‰£å‡åº“å­˜ (Saga Action)
func (l *DeductLogic) Deduct(in *stock.DeductReq) (*stock.DeductReply, error) {
	l.Infof("ğŸ”¥ [Stock Action] æ­£åœ¨æ‰£å‡å›¾ä¹¦ %d çš„åº“å­˜: %d", in.BookId, in.Count)

	// ç›´æ¥è°ƒç”¨ Model æ–¹æ³•ï¼Œä¸æ¶‰åŠä»»ä½• SQL
	err := l.svcCtx.StockModel.Deduct(l.ctx, in.BookId, in.Count)
	if err != nil {
		l.Errorf("âŒ æ‰£å‡åº“å­˜å¤±è´¥: %v", err)

		// ğŸ”¥ 2. å…³é”®ä¿®æ”¹ï¼šå°† error åŒ…è£…æˆ Aborted çŠ¶æ€ç 
		// DTM åªæœ‰çœ‹åˆ° Aborted æˆ– Failed æ‰ä¼šåœæ­¢é‡è¯•å¹¶è§¦å‘å›æ»š
		return nil, status.Error(codes.Aborted, err.Error())
	}

	return &stock.DeductReply{}, nil
}
